--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 
     <modules>
         <module>config-server</module>
+        <module>shit-storage-service</module>
     </modules>
 
 </project>
