--- a/config/shit-storage-service.properties
+++ b/config/shit-storage-service.properties
@@ -7,3 +7,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.serviceUrl.defaultZone: http://localhost:8003/eureka/
