Added streaming through rabbitmq

--- a/config/shit-storage-service.properties
+++ b/config/shit-storage-service.properties
@@ -11,3 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone: http://localhost:8003/eureka/
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=root
+spring.rabbitmq.password=12345
+
+spring.cloud.stream.bindings.input.destination=shits
