--- a/config/shit-storage-client.properties
+++ b/config/shit-storage-client.properties
@@ -1,6 +1,7 @@
 server.port=8004
 
 spring.cloud.stream.bindings.output.destination=shits
+spring.cloud.stream.bindings.output.binder=rabbit
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
