--- a/config/shit-storage-service.properties
+++ b/config/shit-storage-service.properties
@@ -1,5 +1,9 @@
 server.port=8002
 
+spring.cloud.stream.bindings.input.destination=shits
+spring.cloud.stream.bindings.input.binder=rabbit
+spring.cloud.stream.bindings.input.group=shit-group
+
 spring.datasource.url=jdbc:mysql://localhost/shit?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=12345
@@ -16,5 +20,3 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=root
 spring.rabbitmq.password=12345
-
-spring.cloud.stream.bindings.input.destination=shits
