Add new service - users

--- a/config/shit-storage-client.properties
+++ b/config/shit-storage-client.properties
@@ -10,4 +10,4 @@ spring.rabbitmq.password=12345
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone: http://localhost:8003/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8003/eureka/
