--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -10,10 +10,10 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>config-server</artifactId>
+	<artifactId>config-service</artifactId>
 	<packaging>jar</packaging>
 
-	<name>config-server</name>
+	<name>config-service</name>
 
 	<dependencies>
 		<dependency>
