--- a/config/shit-storage-service.properties
+++ b/config/shit-storage-service.properties
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone: http://localhost:8003/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8003/eureka/
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
