--- a/config/users-service-dev.properties
+++ b/config/users-service-dev.properties
@@ -4,3 +4,7 @@ spring.rabbitmq.username=root
 spring.rabbitmq.password=12345
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8003/eureka/
+
+#spring.security.enabled=false
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
