--- a/config/users-service.properties
+++ b/config/users-service.properties
@@ -2,3 +2,5 @@ management.security.enabled=false
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+spring.data.mongodb.database=users-service
