--- a/eureka-service/src/main/resources/bootstrap.properties
+++ b/eureka-service/src/main/resources/bootstrap.properties
@@ -2,3 +2,7 @@ spring.application.name=eureka-service
 
 spring.cloud.config.uri=http://localhost:8001
 management.security.enabled=false
+
+# http://cloud.spring.io/spring-cloud-static/spring-cloud-config/1.3.3.RELEASE/single/spring-cloud-config.html#config-client-retry
+spring.cloud.config.failFast=true
+spring.cloud.config.retry.maxAttempts=2147483647
