Added configs for streams-group-service

--- a/config/streams-group-service.properties
+++ b/config/streams-group-service.properties
@@ -1,7 +1,7 @@
-server.port=8005
+server.port=8006
 management.security.enabled=false
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-spring.data.mongodb.database=users-service
+spring.data.mongodb.database=streams-group-service
