--- a/config/users-service.properties
+++ b/config/users-service.properties
@@ -5,3 +5,5 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 spring.data.mongodb.database=users-service
+
+logging.path=logs
